[package]
name = "xref_apply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
clap = { version = "3.2", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
object = "0.30"
brocolib = { git = "https://github.com/StackDoubleFlow/brocolib.git", branch = "il2cpp_v29" }
bad64 = "0.6"
